    - fixed a "poison pill" bug, where a single consistently tempfailed message
      (e.g. due to a particular mailbox being throttled) would cause all of
      that domain's MXes to be marked as down. simta would then skip delivery of
      any remaining messages in that host queue.
    - corrected the error code returned for unsupported MAIL/RCPT extensions

1.5.0 (2020-11-30)
    - fixed crash from bad bugfix
    - added per-domain limits on recipients per message delivery attempt

1.4.6 (2020-10-19)
    - fixed crash when a block DNSL did not have a default reason set
    - added a standard log line at the start of each mail transaction

1.4.5 (2020-08-14)
    - fixed minor issue with generated message IDs

1.4.4 (2020-03-03)
    - fixed issue where messages weren't always locked while delivery was occurring
    - added authenticated user canonicalization

1.4.3 (2020-02-06)
    - fixed lack of aggression on initial delivery of messages with many recipients
    - improved authentication failure logging

1.4.2 (2019-10-24)
    - fixed adding authentication results to messages with failed ARC chains

1.4.1 (2019-08-29)
    - improved ARC logging
    - fixed some spurious log messages
    - added regeneration of invalid From headers in MSA mode
    - removed deprecated RECEIVE_QUEUE_STRATEGY PUNT

1.4.0 (2018-10-07)
    - fixed a crash in MAX_FAILED_SENDERS
    - fixed charset detection for some UTF-8 codepoints
    - switched from libidn to libidn2 for IDNA handling
    - added PUNT_STRATEGY

1.3.1 (2018-09-14)
    - fixed address parsing to disallow empty domain labels
    - added MAX_FAILED_SENDERS
    - improved behaviour after failed STARTTLS

1.3.0 (2018-09-07)
    - added support for Barracuda BBATV
    - moved secondary MX configuration from R to D
    - added an undocumented feature

1.2.0 (2018-05-25)
    - added support for email address DNS lists
    - fixed libopenarc assert crash
    - reduced some buffer allocation sizes