@@ -285,6 +285,14 @@ deliver {
         selector = simta;
         #key = /path/to/key
     }
+    timeout {
+        tls = 5m;
+        command = 5m;
+        data_session = 30m;
+        data_line = 5m;
+        fast_data_session = 5m;
+        fast_data_line = 60s;
+    }
     # If set, simta will inject a SIMTA-Seen-Before trace header into
     # outgoing mail. Incoming mail with a matching SIMTA-Seen-Before
     # header will be accepted and deleted.
@@ -524,11 +532,6 @@ domain "localhost.DEFAULT" {
 #RECEIVE_COMMAND_LINE_TIMEOUT 600
 #RECEIVE_DATA_SESSION_TIMEOUT 3600
 #RECEIVE_DATA_LINE_TIMEOUT 300
-#
-#DELIVER_TLS_CONNECT_TIMEOUT 300
-#DELIVER_COMMAND_LINE_TIMEOUT 300
-#DELIVER_DATA_LINE_TIMEOUT 0
-#DELIVER_DATA_SESSION_TIMEOUT 0
 
 # SMTP_LISTEN_BACKLOG <max>
 #
