@@ -244,11 +244,6 @@ extern int simta_inbound_data_line_timer;
 extern int simta_inbound_data_session_timer;
 extern int simta_inbound_ssl_accept_timer;
 
-extern int simta_outbound_command_line_timer;
-extern int simta_outbound_data_line_timer;
-extern int simta_outbound_data_session_timer;
-extern int simta_outbound_ssl_connect_timer;
-
 int   q_cleanup(void);
 int   smtp_receive(int, struct connection_info *, struct simta_socket *);
 void  panic(const char *);
